# FPVgen

./: .gitignore  CITATION.cff  README.md  assemble_table.py  coordinate.py  flamelet_table_generator.py  generate_table.py  plot_flamelets.py  pyproject.toml
sample/: input.toml
src/fpvgen/: __init__.py  coordinate.py  flamelet_table_generator.py
src/scripts/: assemble_table.py  generate_table.py  plot_flamelets.py
