[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FPVgen"
version = "0.1.0"
description = "A software tool for generating flamelet tables for combustion simulations."
authors = [
    { name = "Laboratory of Fluids in Complex Environments"},
    { name = "Matthew Bonanni", email = "mbonanni001@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["fpv", "flamelet", "automation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8,<3.13"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "h5py",
    "tomli",
    "cantera >=3.1.0a4"
]

[project.urls]
Homepage = "https://github.com/IhmeGroup/FPVgen"
Issues = "https://github.com/IhmeGroup/FPVgen/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "fpvgen.__version__" }

[project.scripts]
generate_table = "scripts.generate_table:main"
assemble_table = "scripts.assemble_table:main"
plot_flamelets = "scripts.plot_flamelets:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ["py312"]
